--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "7.1.3",
+    "@types/react-router-dom": "^5.1.0",
+    "connected-react-router": "^6.5.2",
+    "history": "^4.10.1",
+    "localforage": "^1.7.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "typescript": "3.6.3"
   },
   "scripts": {
