--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "preserve",
+    "baseUrl": "src"
   },
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
